Aula 03/06/2022 (Atualizado 07.06.2022) ver1.3

--- a/03.06.2022/index.html
+++ b/03.06.2022/index.html
@@ -10,6 +10,7 @@
     <title>Aula 03/06/2022 - (Fábio - Serviços Web)</title>
 </head>
 <body class="Body">
+    <div class="Quadrado-Cotação">
     <h1>Cotação de Moedas</h1>
     <br>
     <label>Digite o Codigo da Moeda:</label>
@@ -17,6 +18,11 @@
     <br>
     <input type="button" class="btn btn-outline-dark" value="Ver Cotação" onclick="moeda()">
     <br>
+    <br>
     <div id="Cotação"></div>
+    <br>
+    <i><p>A Cotação é atualizada a cada <strong>30 segundos</strong>.</p></i>
+    </div>
 </body>
 </html>
+
